# Engine12

./: .gitignore  CMakeLists.txt
include/: ComponentManager.h  Core.h  EngineConfig.h  EngineExceptions.h  Error.h  FileManager.h  GlobalVars.h  Object.h  ObjectManager.h  Renderer.h  Shader.h  SystemVars.h  Texture.h  WindowManager.h
include/GLFW/: glfw3.h
include/components/: Component.h  Shader.h  Texture.h  Transform.h
include/glad/: glad.h
include/managers/: ComponentManager.h  FileManager.h  InputManager.h  ObjectManager.h  SceneManager.h  WindowManager.h
include/objects/: Object.h  Scene.h  Window.h
include/scripts/: Camera.h  Script.h
include/systemutils/: EngineExceptions.h  Error.h  GlobalVars.h  IDSystem.h
resources/shaders/: fragment.frag  vertex.vert
src/: ComponentManager.cpp  Core.cpp  EngineConfig.cpp  EngineExceptions.cpp  Error.cpp  FileManager.cpp  GlobalVars.cpp  Object.cpp  ObjectManager.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  WindowManager.cpp  main.cpp
src/components/: Component.cpp  Shader.cpp  Texture.cpp  Transform.cpp
src/glad/: glad.c
src/managers/: ComponentManager.cpp  FileManager.cpp  InputManager.cpp  ObjectManager.cpp  SceneManager.cpp  WindowManager.cpp
src/objects/: Object.cpp  Scene.cpp  Window.cpp
src/systemutils/: EngineExceptions.cpp  Error.cpp  GlobalVars.cpp  IDSystem.cpp
src/template/: ComponentManager.tpp  EngineConfig.tpp
